2007-12-12  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Don't use dynamic scaling to render
	the axes - cylinders were reduced to lines before.

	* libavogadro/src/engine.h: Added a renderQuick() function that
	focuses on rendering the molecule quickly for interactivity.

	* libavogadro/src/glpainter.cpp: Use a reduced quality when dynamic
	scaling is not used - 1/3rd of max for that quality right now.

	* libavogadro/src/glwidget.cpp: Adding new logic for dealing with
	display list caches, calling renderQuick correctly etc.

2007-12-11  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glpainter.*: Added a dynamic scaling variable to the
	class and a setter. This turns dynamic scaling on (default) and off.

	* avogadro/src/CMakeLists.txt, libavogadro/src/CMakeLists.txt,
	+i18n/avogadro_en_GB.ts: Added a British English translation.

2007-12-11  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/primitive.h: New primitive types defined for
	"future expansion."

	* avogadro/src/extensions/gamessinputdialog.ui: Fix typos
	mentioned by Benoit.

	* avogadro/src/extensions/propmodel.cpp,
	avogadro/src/extensions/propextension.cpp: Minor fixes to get
	compilation working again.

2007-12-11  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/autoopttool.[h,cpp]: Added "Ignored atoms are
	movable" and "Fixed atoms are movable". Small changes to ::redo() and
	::undo(), undo still seems to work. I had to change it to makje sure
	the passed molecule pointer would not point to a molecule that would
	be deleted. This caused the constraints in the model to be lossed.
	(note: OB does not support angle and torsion constraints yet, ignoring
	atoms only works for MMFF94 at the moment.)

	* avogadro/src/extentions/constraintsmodel.[h,cpp]: now connects to
	primitiveRemoved signal from a Molecule to delete invalid constraints
	as you remove atoms.
